--- a/PracticasClases/05_2capas/docker-compose.yml
+++ b/PracticasClases/05_2capas/docker-compose.yml
@@ -11,5 +11,6 @@ services:
       - MONGODB_CNN=mongodb://mongo:27017/test
   mongo:
     image: mongo
+    command: mongod --quiet --logpath /dev/null
     ports:
       - 27017:27017
